--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -146,8 +146,8 @@
     "ANSWER6": "Answer 6",
     "CORRECTANSWERS": "Select the correct answer/s",
     "CREATE": "CREATE",
-    "TABLECATEGORY": "Category",
-    "TABLESTATEMENT": "Statement",
+    "TABLECATEGORY": "Category: ",
+    "TABLESTATEMENT": "Statement: ",
     "TABLEIMAGE": "Image",
     "TABLETYPEOFQUESTION": "Type",
     "TABLEDIFFICULTY": "Difficulty",
