Versión para github 2.0

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -270,7 +270,7 @@
     "IMAGE": "Imagen (URL)",
     "CATEGORY": "Categoria",
     "DIFFICULTY": "Dificultat",
-    "ANSWERWHY": "Argumenta la respuesta",
+    "ANSWERWHY": "Argumenta la rFespuesta",
     "NUMBEROFANSWERS": "Número de respuestas",
     "OPENANSWER": "Respuesta abierta",
     "ANSWER1": "Respuesta número 1",
