--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -303,9 +303,15 @@
     "SELECTQUESTIONS": "Selecciona la/s pregunta/s",
     "CREATE": "Crear",
     "TABLEIMAGE": "Imagen",
-    "TABLEID": "Identificador",
+    "TABLEID": "Id",
     "TABLECATEGORY": "Categoria",
-    "TABLESTATEMENT": "Enunciado"
+    "TABLESTATEMENT": "Enunciado",
+    "CLOSEBUTTON": "CERRAR",
+    "NOFILTER": "Sin filtro",
+    "EXIT": "SALIR",
+    "NEWCATEGORY": "NUEVA CATEGORIA",
+    "VIEWQUESTIONNAIRE": "Mis cuestionarios",
+    "VIEWQUESTION": "Mis preguntas"
   },
   "GAMES": {
     "NAMEGAME": "Nombre del juego",
@@ -334,6 +340,7 @@
     "CREATEBUTTON": "Crear",
     "NEWGAME": "CREAR UN JUEGO",
     "SEERESULTS": "VER RESULTADOS",
+    "SEEANSWERS": "VER RESPUESTAS",
     "ACTIVEQUESTIONNAIRES": "JUEGOS ACTIVOS",
     "TABLETYPEOFGAME": "Tipo de juego",
     "TABLESTARTDATE": "Fecha de inicio",
@@ -347,12 +354,22 @@
     "SELECTQUESTIONNAIRE": "Selecciona un cuestionario",
     "TABLEIDSTUDENT": "Identificador del estudiante",
     "TABLEFINALMARK": "Nota final",
+    "TABLETOTALOFQUESTIONS": "Número de preguntas",
     "TABLEANSWERSCORRECT": "Respuestas correctas",
     "TABLEANSWERSNOCORRECT": "Respuestas incorrectas",
     "TABLEUSERANSWERS": "Respuestas del usuario",
     "TABLEANSWERQUESTION": "Respuesta número",
     "TABLENOANSWER": "NO RESPONDIDA",
-    "TABLENORESULTS": "SIN RESULTADOS"
+    "TABLENORESULTS": "SIN RESULTADOS",
+    "GOBACK": "SALIR",
+    "USERANSWERS": "Respuestas del estudiante",
+    "GAMERESULTS": "Resultados del juego",
+    "QUIZPIPINFORMATION": "Modo clásico de responder un cuestionario. Aparecerán todas las preguntas en la pantalla. Finalmente enviaran las respuestas mediante el botón de enviar (o cuando se acabe el tiempo).",
+    "1BY1INFORMATION": "En la pantalla aparecerá una pregunta cada vez. Los estudiantes iran respondiendo una a una sin opción de volver atrás.",
+    "QLASSPIPINFORMATION": "(NO ESTA IMPLEMENTADO AÚN): Se ha pensado que será similar al juego del kahoot.",
+    "FLIPCARDSPIPINFORMATION": "Este juego esta enfocado a estudiar. La pregunta aparecerá en la pantalla y cuando los estudiantes piensen que saben la respuesta, podrán verla pasando el ratón por encima de ella.",
+    "TIMETOLEARNINFORMATION": "(NO ESTA IMPLEMENTADO AÚN). Se ha pensado que aparecerá una notificación en el móvil con una pregunta en un momento aleatorio del día (8:00 - 22:00). Cuando mas rapido respondan, más puntos se llevará el alumno.",
+    "TRIVIALCLIPINFORMATION": "(NO ESTA IMPLEMENTADO AÚN). Se ha pensado que sea similiar al juego del Trivial."
   },
   "ERROR": {
     "EMPTYFIELDS": "Hay que rellenar todos los campos correctamente",
