--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -7,6 +7,9 @@
     "PRIVACY": "Privacitat",
     "MARK": "Classpip ©2016-2017. Codi amb llicència sota una llicència Apache-2"
   },
+  "MASCOTAS": {
+    "VER": "Veure mascota"
+  },
   "HOME": {
     "TITLE": "Inici",
     "TWITTER": "TWITTER",
