--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,6 +7,9 @@
     "PRIVACY": "Privacidad",
     "MARK": "Classpip ©2016-2017. Código licenciado bajo una licencia Apache-2"
   },
+  "MASCOTAS": {
+    "VER": "Ver mascota"
+  },
   "HOME": {
     "TITLE": "Inicio",
     "TWITTER": "TWITTER",
