--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,9 @@
     "PRIVACY": "Privacy",
     "MARK": "Classpip ©2016-2019. Code licensed under an Apache-2 License"
   },
+  "MASCOTAS": {
+    "VER": "See pet"
+  },
   "HOME": {
     "TITLE": "Home",
     "TWITTER": "TWITTER",
